frontend/src/pages/FindZone/FindZone.module.css
button {
    text-decoration: none;
}

.search {
    width: 90%;
    justify-content: center;
    padding: 7px;
    box-sizing: border-box;
}

.map {
    width: 90%;
    height: 95vh;
    border: 2px solid #e3e3e3;
    border-radius: 0.8rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.missZone {
    min-width: 500px;
    margin-top: 1rem;
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-items: center;
}

.missZone h2 {
    font-weight: 600;
    font-size: 1.5rem;
}

.addZone {
    margin-top: 15px;
    cursor: pointer;
    background-color: #e2e2e2;
    border-style: none;
    border-radius: 10px;
    padding: 10px 20px;
}

.openZone {
    width: 500px;
    margin-top: 15px;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.inputs {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.rating {
    display: flex;
    flex-direction: column;
    gap: 0.25rem;
    border: 2px solid #e3e3e3;
    border-radius: 10px;
    padding: 0.4rem;
}

.rating p {
    color: #747474;
}

.buttonRow {
    display: flex;
    flex-direction: row;
    gap: 0.5rem;
}

.accordionDetails {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.accordionDetails p {
    font-size: 0.8rem; 
    line-height: 1; 
    font-weight: 300
}

.accordionDetails ul {
    padding-left: 0.7rem;
}

.accordionDetails li {
    font-size: 0.8rem;
    font-weight: 300;
}

.accordionDetails li strong {
    font-size: 0.8rem;
    font-weight: 500;
}

.submit {
    width: 100%;
    cursor: pointer;
    background-color: #86F29E;
    border-style: none;
    border-radius: 10px;
    padding: 10px 20px;
}

.cancel {
    width: 100%;
    cursor: pointer;
    background-color: #F1958F;
    border-style: none;
    border-radius: 10px;
    padding: 10px 20px;
}

@media only screen and (max-width: 832px) {
    .missZone {
        min-width: 305px;
    }

    .openZone {
        width: 305px;
    }
}

/* @media screen and (max-width: 500px) {
    .map {
        width: 100%;
        height: 95vh;
        border: none;
        border-radius: none;
        align-items: center;
        justify-content: center;
    }
} */

